# racing_vision_ws

./: .gitignore  path.bag  sc.txt
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/camera_calibration/: .catkin
devel/.private/camera_dynamic/: .catkin  .rosinstall  local_setup.sh
devel/.private/camera_lidar_fusion/: .catkin
devel/.private/catkin_simple/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/catkin_tools_prebuild/: .catkin  setup.sh
devel/.private/cone_detection/: .catkin  .rosinstall
devel/.private/ddynamic_reconfigure/: .catkin  local_setup.sh
devel/.private/depth_image_proc/: .catkin  .rosinstall
devel/.private/image_pipeline/: .catkin  .rosinstall  local_setup.sh
devel/.private/image_proc/: .catkin  .rosinstall
devel/.private/image_publisher/: .catkin  local_setup.sh
devel/.private/image_rotate/: .catkin  setup.sh
devel/.private/image_view/: .catkin  .rosinstall  setup.sh
devel/.private/linefit_ground_segmentation/: .catkin  .rosinstall
devel/.private/linefit_ground_segmentation_ros/: .catkin  local_setup.sh
devel/.private/rslidar_sdk/: .catkin  .rosinstall
devel/.private/slam/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/stereo_image_proc/: .catkin  local_setup.sh
devel/.private/sync_data/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/usb_cam/: .catkin  .rosinstall  setup.sh
devel/.private/yolo/: .catkin  local_setup.sh  setup.sh
devel/include/camera_dynamic/: CameraConfig.h
devel/include/camera_lidar_fusion/: LabeledPointArray.h
devel/include/cone_detection/: LabeledPointArray.h
devel/include/image_proc/: CropDecimateConfig.h  DebayerConfig.h  RectifyConfig.h  ResizeConfig.h
devel/include/image_publisher/: ImagePublisherConfig.h
devel/include/image_rotate/: ImageRotateConfig.h
devel/include/image_view/: ImageViewConfig.h
devel/include/stereo_image_proc/: DisparityConfig.h
devel/include/yolo/: LabeledPointArray.h
devel/lib/camera_calibration/: cameracalibrator.py  cameracheck.py  tarfile_calibration.py
devel/lib/camera_dynamic/: dynamic_reconfigure_node
devel/lib/camera_lidar_fusion/: camera_lidar_fusion  time_synchronization
devel/lib/cone_detection/: conditional_removel  cone_legality_verification  dbscan  downsampling  euclidean_clustering  pointcloud_angle_rotation  reconstructed_cone
devel/lib/ddynamic_reconfigure/: ddynamic_reconfigure_auto_update_test  fake_dynamic_reconfigure_server  test_bool_dynamic_reconfigure_server
devel/lib/image_proc/: image_proc
devel/lib/image_publisher/: image_publisher
devel/lib/image_rotate/: image_rotate
devel/lib/image_view/: disparity_view  extract_images  extract_images_sync  image_saver  image_view  stereo_view  video_recorder
devel/lib/linefit_ground_segmentation_ros/: ground_segmentation_node  ground_segmentation_test_node
devel/lib/pkgconfig/: camera_calibration.pc  camera_dynamic.pc  camera_lidar_fusion.pc  catkin_simple.pc  catkin_tools_prebuild.pc  cone_detection.pc  ddynamic_reconfigure.pc  depth_image_proc.pc  image_proc.pc  image_publisher.pc  image_rotate.pc  image_view.pc  linefit_ground_segmentation.pc  linefit_ground_segmentation_ros.pc  rslidar_sdk.pc  stereo_image_proc.pc  usb_cam.pc  yolo.pc
devel/lib/rslidar_sdk/: rslidar_sdk_node
devel/lib/stereo_image_proc/: stereo_image_proc
devel/lib/usb_cam/: usb_cam_node
devel/lib/yolo/: LTS_v2.py  cone_marker  tf_broadcaster  yolo-trans_3D_to_2D.py  yolo_dual.py
logs/camera_lidar_fusion/: build.cmake.000.log.stderr  build.cmake.004.log.stderr  build.cmake.005.log.stderr  build.cmake.006.log.stderr  build.make.000.log.stderr  build.make.002.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr  build.make.008.log.stderr  build.make.009.log.stderr  build.make.010.log.stderr  build.make.011.log.stderr  build.make.012.log.stderr  build.make.013.log.stderr  build.make.014.log.stderr  build.make.015.log.stderr  build.make.016.log.stderr
logs/cone_detection/: build.cmake.000.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr
logs/rslidar_sdk/: build.cmake.000.log.stderr
logs/yolo/: build.check.013.log.stderr  build.make.000.log.stderr  build.make.002.log.stderr
src/camera_lidar_fusion/: CMakeLists.txt  package.xml
src/camera_lidar_fusion/msg/: CarState.msg  ConeDetections.msg  LabeledPointArray.msg  Map.msg
src/camera_lidar_fusion/src/: camera_lidar_fusion.cpp  speed_comp.cpp  temp.cpp  time_synchronization.cpp
src/can_read/: CMakeLists.txt  package.xml
src/can_read/msg/: CanFrame.msg
src/can_read/src/: read.cpp
src/cone_detection/: CMakeLists.txt
src/cone_detection/launch/: cone_detection_parms.yaml  downsampling_legality.launch
src/cone_detection/src/: conditional_removel.cpp  cone_legality_verification.cpp  dbscan.cpp  downsampling.cpp  euclidean_clustering.cpp
src/fs-racing-yolo/: README.md  ost.txt  run_bag.sh  run_cam.sh  run_yolo.sh
src/fs-racing-yolo/calibration_data/: ost.txt  ost2.yaml
src/fs-racing-yolo/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
src/fsd_common_msgs/: CMakeLists.txt
src/ft-fsd-path-planning/fsd_path_planning.egg-info/: PKG-INFO  SOURCES.txt  (+2 more)
src/pure_pursuit/: CMakeLists.txt
src/pure_pursuit/src/: pure_pursuit.cpp
(+465 files in other folders)
